2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/imap.el (imap-fetch-safe): Removed function, and altered all
	callers to use `imap-fetch' instead.  According to the comments, this
	should be safe, since all other IMAP clients use the 1:* syntax.
	(imap-enable-exchange-bug-workaround): Removed.
	(imap-debug): Removed -- doesn't seem very useful.

2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/imap.el (imap-log): New convenience function used throughout
	instead of repeating the same code all over the place.

2010-09-05  David De La Harpe Golden  <david@harpegolden.net>

	* mouse.el (mouse-save-then-kill): Save region to kill-ring
	when mouse-drag-copy-region is non-nil (Bug#6956).

2010-09-05  Chong Yidong  <cyd@stupidchicken.com>

	* dired.el (dired-ls-sorting-switches, dired-sort-by-name-regexp):
	Improve regexps (Bug#6987).
	(dired-sort-toggle): Search more robustly for -t flag.

	* files.el (get-free-disk-space): Search more robustly for
	"available" column.  Suggested by Ehud Karni
	<ehud@unix.mvs.co.il>.

2010-09-05  Juanma Barranquero  <lekktu@gmail.com>

	* international/uni-bidi.el:
	* international/uni-category.el:
	* international/uni-combining.el:
	* international/uni-decimal.el:
	* international/uni-mirrored.el:
	* international/uni-name.el: Regenerate.

2010-09-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* electric.el (electric-indent-post-self-insert-function):
	Don't reindent with a sloppy indentation function.

	* emacs-lisp/syntax.el (syntax-ppss): More sanity check to catch
	border case in change-log-mode.

2010-09-04  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Remove ruby regexp; handle Ruby errors with gcc-include and gnu.
	Recognize leading tab in gcc-include regexp.  Ignore names with
	leading "from" or "in" in gnu regexp (Bug#6937).

2010-09-04  Stefan Monnier  <monnier@iro.umontreal.ca>
